refactor: revert to 1.20.4 api for core and remove 1.20.5+ properties